feat: add fiscal document manual issued override
